--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,9 @@ spring.application.name=TradeAssignment
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=saa
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-#/Expiry Service to run every 2 minutes ( for testing)
-trade.expiry.run.schedule=0/2 * * * * ?
+#Expiry Service to run every 30 seconds ( for testing)
+trade.expiry.run.schedule=0/30 * * * * ?
